add getObjectNames endpoint
