# view/swagger.json
@@ -12,6 +12,27 @@
     }],
     "schemes": ["http"],
     "paths": {
+        "/objects": {
+            "get": {
+                "tags": ["object"],
+                "summary": "Find object's names",
+                "description": "Returns a object name list",
+                "operationId": "findObjectNames",
+                "produces": ["application/xml", "application/json"],
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Object not found"
+                    }
+                }
+            }
+        },
         "/objects/{objectName}": {
             "get": {
                 "tags": ["object"],
